Fixes dropdown spacing

--- a/client/stylesheets/header.import.styl
+++ b/client/stylesheets/header.import.styl
@@ -61,6 +61,7 @@ header
 
 .dropdown-menu
   background nav-hover
+  padding-top 0
   > li 
     border-bottom 1px solid primary-dark
     &:last-of-type
